welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:3: error: not found: value to
  for (i <- to ((nums.length)-1)) {
            ^